--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data-driven-test": "npx wdio run wdio conf.js --spec ./test/specs/dataDriven.e2e.js",
+    "regression": "npx wdio run wdio conf.js --spec ./test/specs/regression/**.**.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,9 @@
     "webdriverio": "^7.26.0"
   },
   "devDependencies": {
+    "@wdio/allure-reporter": "^7.26.0",
     "@wdio/cli": "^7.26.0",
+    "@wdio/crossbrowsertesting-service": "^7.26.0",
     "@wdio/local-runner": "^7.26.0",
     "@wdio/mocha-framework": "^7.26.0",
     "@wdio/selenium-standalone-service": "^7.26.0",
